June 18, 2022 pitbox46
-Port to 1.18.2
-Switch to using entityData rather than a custom data syncing system

October 25, 2021 pitbox46
-Fixed bug where refmap wouldn't load (how did no one tell me about this until yesterday?!)

October 1, 2021 pitbox46
-Updated to Minecraft 1.17.1
-Switched to parchment mappings

August 19, 2021 pitbox46
-Updated Forge version to 36.2.2
-Should resolve Issue #2

May 18, 2021 pitbox46
-Added server config ability to lock players into combat mode

May 1, 2021 pitbox46
-Removed unnecessary @OnlyIn from HorseCombatControls