@@ -22,7 +22,7 @@ mixin {
 }
 
 group = 'github.pitbox46'
-version = '1.19.0-1.0.0'
+version = '1.19.0-1.0.1'
 archivesBaseName = 'horsecombatcontrols'
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '17'
