@@ -1,0 +1,4 @@
+package github.pitbox46.horsecombatcontrols.network;
+
+public record CombatModePacket(boolean combatMode) {
+}
